Adding ListPolicies api
Api endpoint for returning minio policies, including tests
